Compila e roda os testes do server no Android Studio com --enable-preview
(para habilitar Virtual Threads)