@@ -22,6 +22,7 @@ test {
     testLogging {
         events "passed", "skipped", "failed"
     }
+    jvmArgs += '--enable-preview'
 }
 
 tasks.jar {
@@ -29,6 +30,10 @@ tasks.jar {
     from(project(':core').fileTree("build/classes/java/main")) {
         include '**/*.class'
     }
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += '--enable-preview'
 }
 
 tasks.withType(JavaExec) {
